--- a/itblog/requirements.txt
+++ b/itblog/requirements.txt
@@ -1,10 +1,10 @@
- asgiref==3.2.7
+ asgiref==3.2.7  --
 beautifulsoup4==4.9.1
-Django==3.0.6
+Django==3.0.6 --
 django-bootstrap4==2.0.1
 importlib-metadata==1.6.1
 Pillow==7.1.2
-pytz==2020.1
+pytz==2020.1 --
 soupsieve==2.0.1
-sqlparse==0.3.1
+sqlparse==0.3.1 --
 zipp==3.1.0
